<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_brown"
    tools:context=".presentation.fragment.authorization.AuthorizationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey"
        android:layout_margin="@dimen/main_container_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/authorizationTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/kyivtypeserif_regular"
            android:text="@string/authorization"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/authorizationUnderliningTitile"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginStart="-50dp"
            android:layout_marginEnd="-50dp"
            android:background="@color/dark_brown"
            app:layout_constraintEnd_toEndOf="@+id/authorizationTitle"
            app:layout_constraintStart_toStartOf="@+id/authorizationTitle"
            app:layout_constraintTop_toBottomOf="@+id/authorizationTitle" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/kyivtypeserif_regular"
            android:text="@string/email"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/authorizationUnderliningTitile" />

        <EditText
            android:id="@+id/enterEmailView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:background="@drawable/shape_edit_text_background"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/email_text"
            app:layout_constraintTop_toBottomOf="@+id/email_text"
            tools:text="dubina_favorit@mail.ru" />

        <TextView
            android:id="@+id/pass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/kyivtypeserif_regular"
            android:text="@string/pass"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/email_text"
            app:layout_constraintTop_toBottomOf="@+id/enterEmailView" />

        <EditText
            android:id="@+id/enterPassView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:background="@drawable/shape_edit_text_background"
            android:ems="10"
            android:inputType="textPassword"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/validatorAuthorizationButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/pass_text"
            app:layout_constraintTop_toBottomOf="@+id/pass_text"
            app:layout_constraintVertical_bias="0.0"
            tools:text="12345" />

        <ImageView
            android:id="@+id/validatorAuthorizationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/shape_brown_circle"
            android:padding="16dp"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>